--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <script type="text/javascript" src="bundle.js"></script>
-  <title>Template</title>
+  <title>Galactic Age Calculator</title>
 </head>
 <body>
 
