add some styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 
+  <p>Have you ever wondered how old you are on different planets? Well, even if you haven't, you are about to find out! Your age varies wildly here on Earth compared to your age on Mercury, Venus, Mars, and Jupiter. I'll be hopping on a rocket to Mars to celebrate my sweet 16!</p>
+
 </body>
 </html>
